# SYNTH

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
config/: payload_anthropic.json  payload_openai.json
docs/: ARCHITECTURE.md  UNIVERSAL_API_GUIDE.md
src/synth/: __init__.py
src/synth/cli/: __init__.py  display.py  main.py  silence.py
src/synth/core/: __init__.py  auth.py  device.py  ensemble.py  exceptions.py  manager.py  normalizer.py  ocr.py  registry.py  router.py  update_check.py  weights.py
src/synth/data/: luminol_distributions.json
src/synth/detectors/: __init__.py  base.py
src/synth/detectors/bnn/: __init__.py  backbone.py  detector.py  preprocessing.py
src/synth/detectors/cospy/: __init__.py  detector.py  model.py  transforms.py
src/synth/detectors/diveye/: __init__.py  classifier.py  detector.py  features.py
src/synth/detectors/luminol/: __init__.py  detector.py  features.py  perplexity.py  shuffler.py
tests/: __init__.py  test_cli_quick.py
